TabResRef - Update waypoint search frag to use keyboard search button.
We now show the user a keyboard search button.

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -112,6 +112,8 @@
     <string name="loading_hotels_and_flights">Loading Hotels and Flights&#8230;</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="when_to_fly">When To Fly</string>
+    <!-- Waypoint fail message for when no suggestion is available. -->
+    <string name="waypoint_suggestion_fail">No waypoint information found! Please alter your query and try again.</string>
 
 
     <!-- Tablet hotel filters -->
