--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -1772,9 +1772,9 @@
     <!-- Button label for confirming your booking -->
     <string name="confirm_book">Confirm &amp; Book</string>
     <!-- Label for advertising optout setting -->
-    <string name="tracking_optout">Tracking Opt-out</string>
+    <string name="tracking_optout">Limit Ad Tracking</string>
     <!-- Description for advertising optout setting -->
-    <string name="tracking_optout_description">Disable 3rd party tracking the next time the app restarts</string>
+    <string name="tracking_optout_description">Disable third-party ad tracking. Requires app restart.</string>
     <!-- Label for clearing private data -->
     <string name="clear_private_data">Clear Private Data</string>
     <!-- Title for dialog confirming the clearing of private data -->
