2604 - Tablet Confirmation Page - Flight
Minor changes.
1) Center the confirmation card on the screen.
2) Got rid of "for #ofGuests" from the confirmation summary text.

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -3049,8 +3049,8 @@
     <string name="tablet_confirmation_hotel_booked">Your hotel is booked!</string>
     <!-- Header text to indicating booking confirmed for flight -->
     <string name="tablet_confirmation_flight_booked">Your flight is booked!</string>
-    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date, %4$s is no of guests-->
-    <string name="tablet_confirmation_summary">%1$s, %2$s for %3$s</string>
+    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date-->
+    <string name="tablet_confirmation_summary">%1$s, %2$s</string>
     <!-- Itinerary summary text %1$s is ItineraryNumber, %2$s is user email -->
     <string name="tablet_itinerary_confirmation_TEMPLATE">Itinerary #%1$s sent to %2$s</string>
     <!-- Share button text for hotels -->
